--- a/src/app/ledfal/ledfal.component.html
+++ b/src/app/ledfal/ledfal.component.html
@@ -1,4 +1,6 @@
-{{szam}}
+
+<h1>Véletlen szám:</h1>
+<p id="veletlen">{{szam}}</p>
 <div *ngFor="let vilagit of ledek">
     <app-lampa [isOn]="vilagit"></app-lampa>
 </div>
